...
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">


        <com.bald.uriah.baldphone.views.BaldEditText
            android:id="@+id/reminder_edit_name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:hint="@string/pill_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="@dimen/huge" />

        <com.bald.uriah.baldphone.views.BaldMultipleSelection
            android:id="@+id/multiple_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            app:text_size="@dimen/medium" />

        <androidx.constraintlayout.widget.ConstraintLayout
...
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.8">

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_sunday"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
                android:layout_weight="1"
                android:background="@drawable/style_for_buttons_transparent"
                android:src="@drawable/pill"
                android:tint="@color/yellow" />

            <com.bald.uriah.baldphone.views.BaldImageButton
                android:id="@+id/green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/style_for_buttons_transparent"
                android:src="@drawable/pill"
                android:tint="@color/green" />
...
                android:src="@drawable/pill"
                android:visibility="gone" />

        </LinearLayout>

        <com.bald.uriah.baldphone.views.BaldButton
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
...
