<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bald_background">

    <com.bald.uriah.baldphone.views.BaldTitleBar
        android:id="@+id/bald_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/pills" />


    <LinearLayout
        android:id="@+id/options_bar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="?bald_background_transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.bald.uriah.baldphone.views.BaldLinearLayoutButton
            android:id="@+id/bt_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/style_for_buttons_transparent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/pill"
                android:tint="?bald_decoration_on_background" />

            <TextView
                style="@style/BackgroundText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_pill" />


        </com.bald.uriah.baldphone.views.BaldLinearLayoutButton>

        <com.bald.uriah.baldphone.views.BaldLinearLayoutButton
            android:id="@+id/bt_time_changer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/style_for_buttons_transparent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/time_on_background"
                android:tint="?bald_decoration_on_background" />

            <TextView
                style="@style/BackgroundText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_pills_time" />

        </com.bald.uriah.baldphone.views.BaldLinearLayoutButton>
    </LinearLayout>


    <com.bald.uriah.baldphone.views.ScrollingHelper
        android:id="@+id/scrolling_helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:empty_text="@string/no_pills"
        app:horizontal_scrolling="false"
        app:layout_constraintBottom_toTopOf="@id/options_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bald_title_bar"

        >

        <com.bald.uriah.baldphone.views.ModularRecyclerView
            android:id="@+id/recycler_view"
            style="@style/ScrollStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.bald.uriah.baldphone.views.ScrollingHelper>

</androidx.constraintlayout.widget.ConstraintLayout>